# S1_coursework

./: .gitignore  pyproject.toml  results.json  sample.csv
notebooks/: instructions.ipynb  results.json  solution.ipynb  solution.ipynb.backup
s1_sol/: __init__.py  bootstrap.py  data_loader.py  fitting.py  models.py  plotting.py  results_manager.py  statistics.py
s1_sol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
